# talk-booking

./: .gitlab-ci.yml
services/talk_booking/: pyproject.toml
services/talk_booking/web_app/: main.py
